traefik/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.192.168.0.56.sslip.io`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
